--- a/pom.xml
+++ b/pom.xml
@@ -8,21 +8,31 @@
     <artifactId>qd-image-classifier</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <dl4j.version>1.0.0-beta2</dl4j.version>
+        <java.version>1.8</java.version>
+        <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
-            <artifactId>deeplearning4j-core</artifactId>
-            <version>1.0.0-beta2</version>
+            <artifactId>deeplearning4j-cuda-9.2</artifactId>
+            <version>${dl4j.version}</version>
         </dependency>
+
+
         <dependency>
-            <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native</artifactId>
-            <version>1.0.0-beta2</version>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-modelimport</artifactId>
+            <version>${dl4j.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.7.25</version>
         </dependency>
+
     </dependencies>
 </project>
